# carlosferreyra

./: .gitignore  ANAME  BACKLOG.md  CNAME  PLAN.md  QUICKSTART.md  README.md  README.md.j2  ROADMAP.md  RXRESUME.md  TXT  bash.sh  carlos.json  index.html  org.json  package-lock.json  package.json  projects.js  projects.json  pyproject.toml  resume.json  resume.schema.json  social_previews_orgs.json  styles.css
.github/: .copilot-instructions.md  FUNDING.yml  code-ql-analysis.yml  dependabot.yml
.github/workflows/: build-readme.yml  build-resume.yml  cron-5min.yml  cron-daily.yml  cron-hourly.yml  cron-twice-day.yml  cron.yml  deploy-cloudflare.yml  deploy-pages.yml  deploy-pages.yml.disabled  fetch-linkedin.yml  generate-pdf.yml  gh-pages-deployment.yml  gh-pages.yml  help.yml  pdfs.yml  portfolio-snapshot.yml  portfolio.yml  publish-pypi.yml  (+10 more)
.idx/: dev.nix
data/: README.md  baseline.json  dev.json  github-portfolio.json  portfolio-config.json  resume.json  resume.schema.json  resumes.json  themes.json
docs/: CNAME  README.md  README_V2.md  issues-script.md  mcp.md
scripts/: build_readme.py  build_template.py  build_variants.py  fetch_template.py  issues.js  pdfs.js  portfolio.js  resume.py  resume_build.py  resume_core.py  resume_pdf.py  resume_push.py  update-package-json.js
silver-dev-cv/: cv.typ.j2
src/: constants.js  index.js  pdfs.js  portfolio.js  projects.js  projects.js.tpl  update-pages.js  update-resumes.js
tests/: test_portfolio.py  test_resume.py
web/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  tsconfig.json
(+49 files in other folders)
