[project]
    authors = [
        { name = "Carlos Eduardo Ferreyra", email = "eduferreyraok@gmail.com" },
    ]
    classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Natural Language :: Spanish",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
    ]
    dependencies = []
    name = "carlosferreyra"
    requires-python = ">=3.10"
    version = "0.0.1"

[project.scripts]
    carlosferreyra = "carlosferreyra:main"
[build-system]
    build-backend = "hatchling.build"
    requires      = ["hatchling"]
